correji errores ortograficos

--- a/asset/desarrollo 3.html
+++ b/asset/desarrollo 3.html
@@ -15,7 +15,7 @@
             <li>estimulacion fisica</li>
         </ul>
        <a href="http://www.youtube.com/watch?v=Rv16_A08D8w&t=7s" target="_blank" rel="noopener noreferrer">enlace al coaching</a>
-    <p>Dejanos tus datos para asedorarte de lo que tenemos para vos</p>
+    <p>Dejanos tus datos para asesorarte de lo que tenemos para vos</p>
        <table>
         <tr>
             <th>nombre</th>
@@ -32,7 +32,7 @@
     </table>
     </main>
     <footer>
-        <p>Queremos ayudarte a lograr ese cambio que te acerce a ese presente ideal que te propones.
+        <p>Queremos ayudarte a lograr ese cambio que te acerque a ese presente ideal que te propones.
         </p>
         <p>Namaste</p>
         <p>contacto: wsp 1125718326</p>
