agrege los mensajes que ordenan la lectura

--- a/asset/desarrollo 3.html
+++ b/asset/desarrollo 3.html
@@ -6,8 +6,10 @@
     <title>Namaste</title>
 </head>
 <body>
+    <!--encabezado-->
     <header><img src="./NAMASTE.png" alt="logo de la empresa"></header>
     <main>
+        <!--cuerpo de paguina-->
         <p>Servicios</p>
         <ul>
             <li>sesiones de coaching</li>
@@ -16,7 +18,8 @@
         </ul>
        <a href="http://www.youtube.com/watch?v=Rv16_A08D8w&t=7s" target="_blank" rel="noopener noreferrer">enlace al coaching</a>
     <p>Dejanos tus datos para asesorarte de lo que tenemos para vos</p>
-       <table>
+      <!--datos de contacto-->
+    <table>
         <tr>
             <th>nombre</th>
             <th>telefono</th>
@@ -31,6 +34,7 @@
          </tr>
     </table>
     </main>
+    <!--pie de paguina-->
     <footer>
         <p>Queremos ayudarte a lograr ese cambio que te acerque a ese presente ideal que te propones.
         </p>
